--- a/templates/flat/template.jinja2
+++ b/templates/flat/template.jinja2
@@ -1,9 +1,10 @@
 <!-- readstor
 group: flat
-output-mode: flat-grouped
-render-context: book
-filename-template-book: "{{ book.author }} - {{ book.title }}"
+context: book
+structure: flat-grouped
 extension: md
+name-templates:
+  book: "{{ book.author }} - {{ book.title }}"
 -->
 
 ---
@@ -12,7 +13,7 @@ author: {{ book.author }}
 last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%dT%H:%M") }}
 ---
 
-# {{ book.author }} - {{ book.title }} 
+# {{ book.author }} - {{ book.title }}
 
 {% for annotation in annotations -%}
 
@@ -21,6 +22,6 @@ last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%dT%H:%M") }}
 {{ annotation.body }}
 
 {% if annotation.notes %}{{ annotation.notes }}{% endif -%}
-{%- if annotation.tags %}{{ annotation.tags | join(sep=" ") }}{% endif %}
+{%- if annotation.tags %}tags: {{ annotation.tags | join(sep=" ") }}{% endif %}
 
 {% endfor %}
