fix: update default templates

--- a/templates/nested/annotation.jinja2
+++ b/templates/nested/annotation.jinja2
@@ -25,5 +25,5 @@ epubcfi: {{ annotation.metadata.epubcfi }}
 
 {{ annotation.body }}
 
-{% if annotation.notes %}{{ annotation.notes }}{% endif -%}
-{%- if annotation.tags %}{{ annotation.tags | join(sep=" ") }}{% endif -%}
+{% if annotation.notes %}notes: {{ annotation.notes }}{% endif -%}
+{%- if annotation.tags %}tags: {{ annotation.tags | join(sep=" ") }}{% endif -%}
