--- a/templates/flat/template.jinja2
+++ b/templates/flat/template.jinja2
@@ -21,7 +21,7 @@ last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%dT%H:%M") }}
 
 {{ annotation.body }}
 
-{% if annotation.notes %}{{ annotation.notes }}{% endif -%}
+{% if annotation.notes %}notes: {{ annotation.notes }}{% endif -%}
 {%- if annotation.tags %}tags: {{ annotation.tags | join(sep=" ") }}{% endif %}
 
 {% endfor %}
