--- a/templates/nested/book.jinja2
+++ b/templates/nested/book.jinja2
@@ -5,7 +5,7 @@ structure: nested-grouped
 extension: md
 name-templates:
   book: "{{ book.author }} - {{ book.title }}"
-  annotation: "{{ annotation.metadata.slug_created }}-{{ book.slug_title }}"
+  annotation: "{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}"
   directory: "{{ book.author }} - {{ book.title }}"
 -->
 
