fix: rename templates with more descriptive names

--- a/templates/using-backlinks/annotation.jinja2
+++ b/templates/using-backlinks/annotation.jinja2
@@ -1,5 +1,5 @@
 <!-- readstor
-group: nested
+group: using-backlins
 context: annotation
 structure: nested-grouped
 extension: md
@@ -21,7 +21,7 @@ location: {{ annotation.metadata.location }}
 epubcfi: {{ annotation.metadata.epubcfi }}
 ---
 
-# [[ {{ links.book }} ]]
+# [[{{ links.book }}]]
 
 {{ annotation.body }}
 
