--- a/templates/using-backlinks/book.jinja2
+++ b/templates/using-backlinks/book.jinja2
@@ -1,27 +1,23 @@
 <!-- readstor
-group: flat
+group: using-backlinks
 context: book
-structure: flat-grouped
+structure: nested-grouped
 extension: md
 name-templates:
   book: "{{ book.author }} - {{ book.title }}"
+  annotation: "{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}"
+  directory: "{{ book.author }} - {{ book.title }}"
 -->
 
 ---
 title: {{ book.title }}
 author: {{ book.author }}
+id: {{ book.metadata.id }}
 last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%dT%H:%M") }}
 ---
 
 # {{ book.author }} - {{ book.title }}
 
-{% for annotation in annotations -%}
-
----
-
-{{ annotation.body }}
-
-{% if annotation.notes %}notes: {{ annotation.notes }}{% endif -%}
-{%- if annotation.tags %}tags: {{ annotation.tags | join(sep=" ") }}{% endif %}
-
+{% for _, link in links.annotations -%}
+![[{{ link }}]]
 {% endfor %}
