--- a/templates/using-backlinks/book.jinja2
+++ b/templates/using-backlinks/book.jinja2
@@ -12,6 +12,7 @@ name-templates:
 ---
 title: {{ book.title }}
 author: {{ book.author }}
+tags: {{ book.tags | join(sep=" ") }}
 id: {{ book.metadata.id }}
 last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%dT%H:%M") }}
 ---
