feat: add ability to sort rendered template names

--- a/templates/basic/basic.jinja2
+++ b/templates/basic/basic.jinja2
@@ -3,7 +3,7 @@ group: basic
 context: book
 structure: flat-grouped
 extension: md
-name-templates:
+names:
   book: "{{ book.author }} - {{ book.title }}"
 -->
 
