--- a/templates/using-partials/using-partials.jinja2
+++ b/templates/using-partials/using-partials.jinja2
@@ -3,7 +3,7 @@ group: using-partials
 context: book
 structure: flat-grouped
 extension: md
-name-templates:
+names:
   directory: "{{ book.author }} - {{ book.title }}"
 -->
 
