--- a/templates/using-backlinks/book.jinja2
+++ b/templates/using-backlinks/book.jinja2
@@ -5,7 +5,7 @@ structure: nested-grouped
 extension: md
 names:
   book: "{{ book.author }} - {{ book.title }}"
-  annotation: "{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}"
+  annotation: "{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}"
   directory: "{{ book.author }} - {{ book.title }}"
 -->
 
