deploy: b166685de4019fb2ee1457df60fdc7f0fa202c17

--- a/dev/templates/context-reference/book.html
+++ b/dev/templates/context-reference/book.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - ReadStor</title>
-        <base href="/">
+        <title>Book - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -13,33 +12,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="src/css/custom.css">
+        <link rel="stylesheet" href="../../src/css/custom.css">
 
 
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "ayu" : "light";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc.js"></script>
+        <script src="../../toc.js"></script>
     </head>
     <body>
     <div id="body-container">
@@ -91,7 +90,7 @@
             <!-- populated by js -->
             <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
             <noscript>
-                <iframe class="sidebar-iframe-outer" src="toc.html"></iframe>
+                <iframe class="sidebar-iframe-outer" src="../../toc.html"></iframe>
             </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -125,11 +124,14 @@
                     <h1 class="menu-title">ReadStor</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
+                        </a>
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/templates/context-reference/book.md" title="Suggest an edit" aria-label="Suggest an edit">
+                            <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
                     </div>
@@ -157,14 +159,65 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="book"><a class="header" href="#book">Book</a></h1>
+<p>A single <code>book</code> object is injected into all template contexts regardless of the template's <a href="/templates/configuration/context-modes.html">Context
+Mode</a>.</p>
+<h2 id="template-fields---book"><a class="header" href="#template-fields---book">Template Fields - Book</a></h2>
+<div class="table-wrapper"><table><thead><tr><th>Attribute</th><th>Type</th><th>Description</th></tr></thead><tbody>
+<tr><td><code>book</code></td><td>dictionary</td><td>book object</td></tr>
+<tr><td><code>book.title</code></td><td>string</td><td>title</td></tr>
+<tr><td><code>book.author</code></td><td>string</td><td>author</td></tr>
+<tr><td><code>book.tags</code></td><td>list[string]</td><td>the book's tags</td></tr>
+<tr><td><code>book.metadata</code></td><td>dictionary</td><td>metadata</td></tr>
+<tr><td><code>book.metadata.id</code></td><td>string</td><td>unique id</td></tr>
+<tr><td><code>book.metadata.last_opened</code></td><td>datetime</td><td>date last opened</td></tr>
+<tr><td><code>book.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
+<tr><td><code>book.slugs.title</code></td><td>string</td><td>title slugified</td></tr>
+<tr><td><code>book.slugs.author</code></td><td>string</td><td>author slugified</td></tr>
+<tr><td><code>book.slugs.metadata</code></td><td>datetime</td><td>slugs metadata object</td></tr>
+<tr><td><code>book.slugs.metadata.last_opened</code></td><td>datetime</td><td>date last opened slugified</td></tr>
+</tbody></table>
+</div>
+<h2 id="example-data---book"><a class="header" href="#example-data---book">Example Data - Book</a></h2>
+<pre><code class="language-json">{
+  "title": "The Art Spirit",
+  "author": "Robert Henri",
+  "tags": ["#artist", "#being", "#inspiration"],
+  "metadata": {
+    "id": "1969AF0ECA8AE4965029A34316813924",
+    "last_opened": "2021-11-02T18:27:04.781938076Z"
+  },
+  "slugs": {
+    "title": "the-art-spirit",
+    "author": "robert-henri"
+  }
+}
+</code></pre>
+<h2 id="example-template---book"><a class="header" href="#example-template---book">Example Template - Book</a></h2>
+<pre><code class="language-jinja2">---
+title: {{ book.title }}
+author: {{ book.author }}
+tags: {{ book.tags | join(sep=" ") }}
+id: {{ book.metadata.id }}
+last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%d-%H:%M") }}
+---
+</code></pre>
+<blockquote>
+<p><i class="fa fa-info-circle"></i> Here <a href="https://tera.netlify.app/">Tera</a>'s <a href="https://tera.netlify.app/docs/#date"><code>date</code></a> filter is used to format
+a <code>datetime</code> object into a human-readable date.</p>
+</blockquote>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../templates/context-reference/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next prefetch" href="../../templates/context-reference/annotation.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -172,7 +225,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../templates/context-reference/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next prefetch" href="../../templates/context-reference/annotation.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -185,13 +244,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
