--- a/dev/templates/configuration/template-groups.html
+++ b/dev/templates/configuration/template-groups.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - ReadStor</title>
-        <base href="/">
+        <title>Template Groups - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -13,33 +12,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="src/css/custom.css">
+        <link rel="stylesheet" href="../../src/css/custom.css">
 
 
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "ayu" : "light";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc.js"></script>
+        <script src="../../toc.js"></script>
     </head>
     <body>
     <div id="body-container">
@@ -91,7 +90,7 @@
             <!-- populated by js -->
             <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
             <noscript>
-                <iframe class="sidebar-iframe-outer" src="toc.html"></iframe>
+                <iframe class="sidebar-iframe-outer" src="../../toc.html"></iframe>
             </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -125,11 +124,14 @@
                     <h1 class="menu-title">ReadStor</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
+                        </a>
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/templates/configuration/template-groups.md" title="Suggest an edit" aria-label="Suggest an edit">
+                            <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
                     </div>
@@ -157,14 +159,91 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="template-groups"><a class="header" href="#template-groups">Template Groups</a></h1>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td>Name</td><td><code>group</code></td></tr>
+<tr><td>Type</td><td>string</td></tr>
+<tr><td>Valid Values</td><td>any</td></tr>
+<tr><td>Required</td><td><i class="fa fa-check"></i></td></tr>
+<tr><td>Default</td><td>-</td></tr>
+</tbody></table>
+</div>
+<p>Groups are used to identify multiple templates that are intended to be part of a single output.
+Conversely, they also provide a way to separate unrelated templates rendered to the same output
+directory. The most common use case would be when using a pair of templates where one is used to
+render a book and the other to render each of its annotations separately.</p>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> Group names are sanitized to make sure they interact well
+with the file system. See <a href="/templates/string-sanitization.html">String Sanitization</a> for more information.</p>
+</blockquote>
+<p>Grouping is triggered when one or more templates are set to either the <code>flat-grouped</code> or the
+<code>nested-grouped</code> <a href="/templates/configuration/structure-modes.html">Structure Mode</a>. The output files are placed within a directory
+named after the <code>group</code>.</p>
+<p>For example, if two templates share these values in their configurations:</p>
+<pre><code class="language-yaml">group: my-vault
+structure: flat-grouped
+</code></pre>
+<p>The output will be:</p>
+<pre><code class="language-plaintext">[output-directory]
+ ├── my-vault
+ │   ├── 2021-11-02-180445-the-art-spirit.md
+ │   ├── 2021-11-02-181250-the-art-spirit.md
+ │   ├── 2021-11-02-181325-the-art-spirit.md
+ │   ├── 2021-11-02-181510-the-art-spirit.md
+ │   ├── 2021-11-02-182059-surely-youre-joking-mr-feynman.md
+ │   ├── 2021-11-02-182319-think-on-these-things.md
+ │   ├── 2021-11-02-182426-think-on-these-things.md
+ │   ├── 2021-11-02-182543-think-on-these-things.md
+ │   ├── 2021-11-02-182648-think-on-these-things.md
+ │   ├── 2021-11-02-182805-think-on-these-things.md
+ │   ├── Krishnamurti - Think on These Things.md
+ │   ├── Richard P. Feynman - "Surely You're Joking, Mr. Feynman!".md
+ │   └── Robert Henri - The Art Spirit.md
+ │
+ ├── [other-group]
+ │    └── ...
+ └── ...
+</code></pre>
+<p>And, if two templates share these values in their configurations:</p>
+<pre><code class="language-yaml">group: my-vault
+structure: nested-grouped
+</code></pre>
+<p>The output will be:</p>
+<pre><code class="language-plaintext">[output-directory]
+ ├── my-vault
+ │   ├── Krishnamurti - Think on These Things
+ │   │   ├── 2021-11-02-182319-think-on-these-things.md
+ │   │   ├── 2021-11-02-182426-think-on-these-things.md
+ │   │   ├── 2021-11-02-182543-think-on-these-things.md
+ │   │   ├── 2021-11-02-182648-think-on-these-things.md
+ │   │   ├── 2021-11-02-182805-think-on-these-things.md
+ │   │   └── Krishnamurti - Think on These Things.md
+ │   ├── Richard P. Feynman - "Surely You're Joking, Mr. Feynman!"
+ │   │   ├── 2021-11-02-182059-surely-youre-joking-mr-feynman.md
+ │   │   └── Richard P. Feynman - "Surely You're Joking, Mr. Feynman!".md
+ │   └── Robert Henri - The Art Spirit
+ │       ├── 2021-11-02-180445-the-art-spirit.md
+ │       ├── 2021-11-02-181250-the-art-spirit.md
+ │       ├── 2021-11-02-181325-the-art-spirit.md
+ │       ├── 2021-11-02-181510-the-art-spirit.md
+ │       └── Robert Henri - The Art Spirit.md`
+ │
+ ├── [other-group]
+ │    └── ...
+ └── ...
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../templates/configuration/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next prefetch" href="../../templates/configuration/context-modes.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -172,7 +251,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../templates/configuration/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next prefetch" href="../../templates/configuration/context-modes.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -185,13 +270,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
