--- a/dev/templates/context-reference/annotation.html
+++ b/dev/templates/context-reference/annotation.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - ReadStor</title>
-        <base href="/">
+        <title>Annotation - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -13,33 +12,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="src/css/custom.css">
+        <link rel="stylesheet" href="../../src/css/custom.css">
 
 
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "ayu" : "light";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc.js"></script>
+        <script src="../../toc.js"></script>
     </head>
     <body>
     <div id="body-container">
@@ -91,7 +90,7 @@
             <!-- populated by js -->
             <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
             <noscript>
-                <iframe class="sidebar-iframe-outer" src="toc.html"></iframe>
+                <iframe class="sidebar-iframe-outer" src="../../toc.html"></iframe>
             </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -125,11 +124,14 @@
                     <h1 class="menu-title">ReadStor</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
+                        </a>
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/templates/context-reference/annotation.md" title="Suggest an edit" aria-label="Suggest an edit">
+                            <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
                     </div>
@@ -157,14 +159,81 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="annotation"><a class="header" href="#annotation">Annotation</a></h1>
+<p>The number of <code>annotation</code> objects injected into a template depends on the template's
+<a href="/templates/configuration/context-modes.html">Context Mode</a>. When the <a href="/templates/configuration/context-modes.html#the-annotation-context">Context Mode</a> is set to
+<code>annotation</code>, a single <code>annotation</code> object is injected into the template's context. When the
+<a href="/templates/configuration/context-modes.html#the-book-context">Context Mode</a> is set to <code>book</code>, multiple <code>annotation</code> objects, under the name
+<code>annotations</code>, are injected into the template's context.</p>
+<h2 id="template-fields---annotation"><a class="header" href="#template-fields---annotation">Template Fields - Annotation</a></h2>
+<div class="table-wrapper"><table><thead><tr><th>Attribute</th><th>Type</th><th>Description</th></tr></thead><tbody>
+<tr><td><code>annotations</code></td><td>list[dictionary]</td><td>annotation objects</td></tr>
+<tr><td><code>annotation</code></td><td>dictionary</td><td>annotation object</td></tr>
+<tr><td><code>annotation.body</code></td><td>string</td><td>body</td></tr>
+<tr><td><code>annotation.style</code></td><td>string</td><td>highlight style/color</td></tr>
+<tr><td><code>annotation.notes</code></td><td>string</td><td>notes</td></tr>
+<tr><td><code>annotation.tags</code></td><td>list[string]</td><td>tags</td></tr>
+<tr><td><code>annotation.metadata</code></td><td>dictionary</td><td>metadata</td></tr>
+<tr><td><code>annotation.metadata.id</code></td><td>string</td><td>unique id</td></tr>
+<tr><td><code>annotation.metadata.book_id</code></td><td>string</td><td>book's unique id</td></tr>
+<tr><td><code>annotation.metadata.created</code></td><td>datetime</td><td>date created</td></tr>
+<tr><td><code>annotation.metadata.modified</code></td><td>datetime</td><td>date modified</td></tr>
+<tr><td><code>annotation.metadata.location</code></td><td>string</td><td>location string</td></tr>
+<tr><td><code>annotation.metadata.epubcfi</code></td><td>string</td><td><a href="https://w3c.github.io/epub-specs/epub33/epubcfi/">epubcfi</a></td></tr>
+<tr><td><code>annotation.slugs</code></td><td>dictionary</td><td>slugs object</td></tr>
+<tr><td><code>annotation.slugs.metadata</code></td><td>dictionary</td><td>slugs metadata object</td></tr>
+<tr><td><code>annotation.slugs.metadata.created</code></td><td>string</td><td>date created slugified</td></tr>
+<tr><td><code>annotation.slugs.metadata.modified</code></td><td>string</td><td>date modified slugified</td></tr>
+</tbody></table>
+</div>
+<h2 id="example-data---annotation"><a class="header" href="#example-data---annotation">Example Data - Annotation</a></h2>
+<pre><code class="language-json">{
+  "body": "Of course it is not easy to go one’s road...",
+  "style": "blue",
+  "notes": "",
+  "tags": [],
+  "metadata": {
+    "id": "9D1B71B1-895C-446F-A03F-50C01146F532",
+    "book_id": "1969AF0ECA8AE4965029A34316813924",
+    "created": "2021-11-02T18:04:45.184863090Z",
+    "modified": "2021-11-02T18:12:30.355533123Z",
+    "location": "6.26.4.2.446.2.1:0",
+    "epubcfi": "epubcfi(/6/26[Part09_Split4]!/4/2/446/2/1,:0,:679)",
+    "slugs": {
+      "created": "2021-11-02-180445",
+      "modified": "2021-11-02-180445"
+    }
+  }
+}
+</code></pre>
+<h2 id="example-template---annotation"><a class="header" href="#example-template---annotation">Example Template - Annotation</a></h2>
+<pre><code class="language-jinja2">{% for annotation in annotations -%}
+
+---
+
+{{ annotation.body }}
+
+{%- if annotation.notes %}notes: {{ annotation.notes }}{% endif -%}
+{%- if annotation.tags %}tags: {{ annotation.tags | join(sep=" ") }}{% endif %}
+
+{% endfor %}
+</code></pre>
+<blockquote>
+<p><i class="fa fa-info-circle"></i> Here <a href="https://tera.netlify.app/">Tera</a>'s <a href="https://tera.netlify.app/docs/#join"><code>join</code></a> filter is used to join
+an array of items into a space-separated string.</p>
+</blockquote>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../templates/context-reference/book.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next prefetch" href="../../templates/context-reference/names.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -172,7 +241,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../templates/context-reference/book.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next prefetch" href="../../templates/context-reference/names.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -185,13 +260,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
