deploy: e44a8cf8d969356cc1173bba3d903b1f3fb74dd2

--- a/dev/templates/configuration/context-modes.html
+++ b/dev/templates/configuration/context-modes.html
@@ -170,8 +170,8 @@
 </div>
 <p>At render time, each template is injected with a "context", in other words, the data it will render.
 ReadStor provides two different context modes: <code>book</code> and <code>annotation</code>. The context mode dictates
-not just the data within the context but also changes the number of output files. See
-<a href="#a-note-on-output-structure">A Note On Output Structure</a> for more information.</p>
+not just the data within the context but also changes the number of output files. See <a href="#a-note-on-output-structure">A Note On
+Output Structure</a> for more information.</p>
 <h2 id="the-book-context"><a class="header" href="#the-book-context">The Book Context</a></h2>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Context Mode</td><td><code>book</code></td></tr>
@@ -276,8 +276,7 @@ names:
   directory: Robert Henri - The Art Spirit
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See <a href="/templates/context-reference/annotation.html">Context Reference - Annotation</a> for more
-information.</p>
+<p><i class="fa fa-info-circle"></i> See <a href="/templates/context-reference/annotation.html">Context Reference - Annotation</a> for more information.</p>
 </blockquote>
 <h2 id="a-note-on-output-structure"><a class="header" href="#a-note-on-output-structure"><i class="fa fa-exclamation-circle"></i> A Note On Output Structure</a></h2>
 <p>When selecting a context mode it's important to understand how the output files will look. The
