--- a/dev/templates/context-reference/names.html
+++ b/dev/templates/context-reference/names.html
@@ -160,9 +160,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="names"><a class="header" href="#names">Names</a></h1>
-<p>A single <code>names</code> object is injected into all template contexts regardless of the template's
-<a href="/templates/configuration/context-modes.html">Context Mode</a>. These contain all the file and directory names rendered from the
-<code>names</code> key in the template's config. See <a href="/templates/configuration/names.html">Names</a> for more information.</p>
+<p>A single <code>names</code> object is injected into all template contexts regardless of the template's <a href="/templates/configuration/context-modes.html">Context
+Mode</a>. These contain all the file and directory names rendered from the <code>names</code> key
+in the template's config. See <a href="/templates/configuration/names.html">Names</a> for more information.</p>
 <h2 id="template-fields---names"><a class="header" href="#template-fields---names">Template Fields - Names</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Attribute</th><th>Type</th><th>Description</th></tr></thead><tbody>
 <tr><td><code>names</code></td><td>dictionary</td><td>names object</td></tr>
