--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -164,8 +164,7 @@
 can be designed to output almost any kind of text-based file format including: Markdown, HTML, CSV.
 PDFs are possible as well but would require an extra step to convert an HTML file to the final PDF.</p>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See the default <a href="https://github.com/tnahs/readstor/tree/main/templates">templates</a> for fully working
-examples.</p>
+<p><i class="fa fa-info-circle"></i> See the default <a href="https://github.com/tnahs/readstor/tree/main/templates">templates</a> for fully working examples.</p>
 </blockquote>
 
                     </main>
