--- a/dev/templates/string-sanitization.html
+++ b/dev/templates/string-sanitization.html
@@ -160,9 +160,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="string-sanitization"><a class="header" href="#string-sanitization">String Sanitization</a></h1>
-<p>To avoid any unexpected behavior, certain user-provided strings are sanitized
-before they are used for naming files or directories. Characters are either
-removed or replaced with an underscore <code>_</code>.</p>
+<p>To avoid any unexpected behavior, certain user-provided strings are sanitized before they are used
+for naming files or directories. Characters are either removed or replaced with an underscore <code>_</code>.</p>
 <div class="table-wrapper"><table><thead><tr><th>Character</th><th style="text-align: center">Removed</th><th style="text-align: center">Replaced</th></tr></thead><tbody>
 <tr><td><code>\n</code></td><td style="text-align: center"><i class="fa fa-check"></i></td><td style="text-align: center"></td></tr>
 <tr><td><code>\r</code></td><td style="text-align: center"><i class="fa fa-check"></i></td><td style="text-align: center"></td></tr>
