--- a/dev/templates/an-example-template.html
+++ b/dev/templates/an-example-template.html
@@ -183,8 +183,8 @@ a space as a delimiter.</p>
 </code></pre>
 <blockquote>
 <p><i class="fa fa-info-circle"></i> See Tera's <a href="https://tera.netlify.app/docs/">documentation</a> to learn more
-about these and more advanced features, including template <a href="https://tera.netlify.app/docs/#inheritance">inheritance</a>, the
-<a href="https://tera.netlify.app/docs/#include">include</a> tag, <a href="https://tera.netlify.app/docs/#macros">macros</a> and the full list of available
+about these and more advanced features, including template <a href="https://tera.netlify.app/docs/#inheritance">inheritance</a>,
+the <a href="https://tera.netlify.app/docs/#include">include</a> tag, <a href="https://tera.netlify.app/docs/#macros">macros</a> and the full list of available
 <a href="https://tera.netlify.app/docs/#built-in-filters">filters</a>.</p>
 </blockquote>
 <h2 id="template"><a class="header" href="#template">Template</a></h2>
@@ -222,12 +222,12 @@ last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%dT%H:%M") }}
 {% endfor %}
 </code></pre>
 <h2 id="output-structure"><a class="header" href="#output-structure">Output Structure</a></h2>
-<p>The output structure is primarily determined by the <code>structure</code> and <code>context</code> keys. With the
-<code>structure</code> set to <code>flat</code> all the output files will be placed inside the
-<a href="/intro/options/global.html#--output-directory-path">output directory</a> with no structure. With the <code>context</code> set to <code>book</code>, a
-single file will be created for each book and, if the template body requests, will contain all its
-respective annotations. See <a href="/templates/configuration/context-modes.html">Context Modes</a> and <a href="/templates/configuration/structure-modes.html">Structure Modes</a>
-for more information.</p>
+<p>The output structure is primarily determined by the <code>structure</code> and <code>context</code> keys. With
+the <code>structure</code> set to <code>flat</code> all the output files will be placed inside the <a href="/intro/options/global.html#--output-directory-path">output
+directory</a> with no structure. With the <code>context</code> set to <code>book</code>, a single file
+will be created for each book and, if the template body requests, will contain all its respective
+annotations. See <a href="/templates/configuration/context-modes.html">Context Modes</a> and <a href="/templates/configuration/structure-modes.html">Structure Modes</a> for more
+information.</p>
 <pre><code class="language-plaintext">[output-directory]
  ├── Krishnamurti - Think on These Things.md
  ├── Richard P. Feynman - "Surely You're Joking, Mr. Feynman!".md
