--- a/dev/templates/context-reference/annotation.html
+++ b/dev/templates/context-reference/annotation.html
@@ -160,10 +160,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="annotation"><a class="header" href="#annotation">Annotation</a></h1>
-<p>The number of <code>annotation</code> objects injected into a template depends on the template's
-<a href="/templates/configuration/context-modes.html">Context Mode</a>. When the <a href="/templates/configuration/context-modes.html#the-annotation-context">Context Mode</a> is set to
-<code>annotation</code>, a single <code>annotation</code> object is injected into the template's context. When the
-<a href="/templates/configuration/context-modes.html#the-book-context">Context Mode</a> is set to <code>book</code>, multiple <code>annotation</code> objects, under the name
+<p>The number of <code>annotation</code> objects injected into a template depends on the template's <a href="/templates/configuration/context-modes.html">Context
+Mode</a>. When the <a href="/templates/configuration/context-modes.html#the-annotation-context">Context Mode</a> is set to <code>annotation</code>,
+a single <code>annotation</code> object is injected into the template's context. When the <a href="/templates/configuration/context-modes.html#the-book-context">Context
+Mode</a> is set to <code>book</code>, multiple <code>annotation</code> objects, under the name
 <code>annotations</code>, are injected into the template's context.</p>
 <h2 id="template-fields---annotation"><a class="header" href="#template-fields---annotation">Template Fields - Annotation</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Attribute</th><th>Type</th><th>Description</th></tr></thead><tbody>
