deploy: 2492c7f9c53714637630afcf2e414ebdda87b9ca

--- a/dev/templates/string-sanitization.html
+++ b/dev/templates/string-sanitization.html
@@ -175,7 +175,7 @@ for naming files or directories. Characters are either removed or replaced with 
 <li><a href="/templates/configuration/template-groups.html">Template Group</a> set in the <code>group</code> config key.</li>
 <li>The rendered values from <a href="/templates/configuration/names.html">Names</a> set in the <code>names</code> config key.</li>
 </ul>
-<!-- TODO: Provde some examples. -->
+<!-- TODO: Provide some examples. -->
 
                     </main>
 
