deploy: 1c12a142fb2dbb9ff4d20f61362e19be0c0f1a37

--- a/dev/templates/backlinks.html
+++ b/dev/templates/backlinks.html
@@ -236,7 +236,7 @@ the <code>location</code> attribute.</p>
 <p>Alternatively we can use the <code>names.directory</code> variable to access the rendered name of the parent
 directory. This value is only available if the <a href="./configuration/structure-modes.html">Structure Mode</a> is set to <code>nested</code>
 or <code>nested-grouped</code>.</p>
-<!-- TODO: Verify this works! -->
+<!-- TODO(docs): Verify this works! -->
 <pre><code class="language-jinja2"># {{ book.author }} - {{ book.title }}
 
 {% for name in names.annotations -%}
