--- a/dev/templates/configuration/structure-modes.html
+++ b/dev/templates/configuration/structure-modes.html
@@ -161,7 +161,7 @@
                     <main>
                         <h1 id="structure-modes"><a class="header" href="#structure-modes">Structure Modes</a></h1>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
-<tr><td>Name</td><td><code>ouput</code></td></tr>
+<tr><td>Name</td><td><code>output</code></td></tr>
 <tr><td>Type</td><td>string</td></tr>
 <tr><td>Valid Values</td><td><code>flat</code> <code>flat-grouped</code> <code>nested</code> <code>nested-grouped</code></td></tr>
 <tr><td>Required</td><td><i class="fa fa-check"></i></td></tr>
