--- a/dev/templates/string-sanitization.html
+++ b/dev/templates/string-sanitization.html
@@ -175,7 +175,7 @@ for naming files or directories. Characters are either removed or replaced with 
 <li><a href="./configuration/template-groups.html">Template Group</a> set in the <code>group</code> config key.</li>
 <li>The rendered values from <a href="./configuration/names.html">Names</a> set in the <code>names</code> config key.</li>
 </ul>
-<!-- TODO: Provide some examples. -->
+<!-- TODO(docs): Provide some examples. -->
 
                     </main>
 
